--- a/src/main/webapp/views/about.html
+++ b/src/main/webapp/views/about.html
@@ -6,5 +6,13 @@
             <li><a href="http://www.twitter.com/jankeesvanandel">Jan-Kees van Andel (@jankeesvanandel)</a></li>
             <li><a href="http://www.twitter.com/jovoordeckers">Jo Voordeckers (@jovoordeckers)</a></li>
         </ul>
-    </p>
+        Contributors:
+        <ul class="plain">
+            <li><a href="http://www.twitter.com/ndeloof">Nicolas De Loof (@ndeloof)</a></li>
+        </ul>
+        Gracefully hosted by CloudBees Platform
+        <a href="http://www.cloudbees.com">
+            <img src="http://www.cloudbees.com/sites/default/files/Button-Powered-by-CB.png" alt="Powered by CloudBees" border="0"/>
+        </a>
+</p>
 </div>
