--- a/src/main/webapp/views/speaker/my_talks.html
+++ b/src/main/webapp/views/speaker/my_talks.html
@@ -1,6 +1,6 @@
 <div ng-controller="Speaker_MyTalksCtrl">
     <ng-include src="'views/speaker/_menu.html'"></ng-include>
-    <h3>My talks</h3>
+    <h3>My Proposals</h3>
     <table>
         <thead>
             <tr>
