--- a/src/main/webapp/views/speaker/submit_talk.html
+++ b/src/main/webapp/views/speaker/submit_talk.html
@@ -1,7 +1,7 @@
 <div ng-controller="Speaker_GlobalCtrl">
     <div ng-controller="Speaker_SubmitTalkCtrl">
         <ng-include src="'views/speaker/_menu.html'"></ng-include>
-        <h3>Submit Talk</h3>
+        <h3>Submit Proposal</h3>
         <form name="submitTalkForm" onsubmit="return false">
             <dl>
                 <dt><label for="talkEvent">Event</label></dt>
