Implement new site design
Proposal submission refactoring

Event retrieval fixed

Removed theme slide

--- a/src/main/webapp/views/home.html
+++ b/src/main/webapp/views/home.html
@@ -1,4 +1,417 @@
-<div ng-controller="HomeCtrl">
-    <h3>Devoxx Call For Papers</h3>
-    <a href="#/login">Login to do some stuff</a>
+
+<div id="carousel" >
+
+    <ul carousel>
+        <li>
+            <div class="grid">
+
+                <div class="row">
+                    <div class="col9 content">
+
+                        <h1>Born to be</h1>
+                        <h3>Edition 2013</h3>
+                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
+                        <a href="#" class="btn">Link here</a>
+
+                    </div>
+                    <div class="col11">
+
+                        <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
+
+                    </div>
+                </div>
+            </div>
+
+        </li>
+        <li>
+            <div class="grid">
+
+                <div class="row">
+                    <div class="col9 content">
+
+                        <h1>Last call for papers</h1>
+                        <h3>Become a speaker</h3>
+                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
+                        <a href="#" class="btn">Submit a paper</a>
+
+                    </div>
+                    <div class="col11">
+
+                        <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
+
+                    </div>
+                </div>
+            </div>
+
+        </li>
+        <li>
+            <div class="grid">
+
+                <div class="row">
+                    <div class="col9 content">
+
+                        <h1>Slide 3</h1>
+                        <h3>edition 2013</h3>
+                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
+                        <a href="#" class="btn">Link here</a>
+
+                    </div>
+                    <div class="col11">
+
+                        <img src="images_dummy/slide_03.png" class="visual" alt="Be born again">
+
+                    </div>
+                </div>
+            </div>
+
+        </li>
+    </ul>
+
 </div>
+
+
+
+<div id="about" class="area lightgrey">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col12">
+
+                <div class="counter" id="counterSpeakers">
+                    <div class="amount">172</div>
+                    <div class="description">Speakers</div>
+                </div>
+
+
+                <div class="counter" id="counterTalks">
+                    <div class="amount">200</div>
+                    <div class="description">Talks</div>
+                </div>
+
+                <img src="images/home_about_map.png" alt="map" class="map" />
+
+            </div>
+            <div class="col7 push1 content">
+
+                <h2>3600 visitors to be expected</h2>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum.</p>
+                <a href="#" class="btn">Buy tickets</a>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
+<div id="news" class="area white">
+
+    <h2>Latest news</h2>
+
+    <div class="carousel">
+        <ul class="newsList clearfix" news>
+            <li>
+                <a href="#">
+                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                    <div class="date">15 june '13</div>
+                    <h4>Here comes news title</h4>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                    <div class="date">15 june '13</div>
+                    <h4>Here comes news title</h4>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                    <div class="date">15 june '13</div>
+                    <h4>Here comes news title</h4>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                    <div class="date">15 june '13</div>
+                    <h4>Here comes news title</h4>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                    <div class="date">15 june '13</div>
+                    <h4>Here comes news title</h4>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                    <div class="date">15 june '13</div>
+                    <h4>Here comes news title</h4>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                    <div class="date">15 june '13</div>
+                    <h4>Here comes news title</h4>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                    <div class="date">15 june '13</div>
+                    <h4>Here comes news title</h4>
+                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                        Fusce dapibus.</p>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+</div>
+
+
+
+<div id="tracks" class="area orange">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col20">
+
+                <h2>Tracks <span>2013</span></h2>
+                <ul class="dotList" id="trackList">
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo. </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
+                        </div>
+                        <h4>Name comes here</h4>
+                        <div class="popup">
+                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
+                        </div>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
+<div id="tweetwall" class="area lightgrey">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col10">
+
+                <h2>What’s up? <span>#DEVOXX</span></h2>
+
+            </div>
+            <div class="col10 apps">
+
+                <h4>Download the app and interact!</h4>
+                <a href="#" class="btn googleStore"></a>
+                <a href="#" class="btn appStore"></a>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col20">
+
+                <div class="carousel" ng-controller="TwitterCtrl">
+
+                    <ul tweetwall>
+                        <li ng-repeat="tweet in tweets" ng-class-even="'even'">
+                            <div class="visual" style="background-image: url({{tweet.thumbnail}});"></div>
+                            <div class="tweet">
+                                <p>{{tweet.tweet}}</p>
+                                <div class="info">
+                                    <a href="#">{{tweet.handle}}</a> , {{tweet.time}} on Twitter
+                                </div>
+                                <span class="ballon"></span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
+<footer class="area grey">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col5">
+
+                <h4>previous editions</h4>
+                <ul>
+                    <li><a href="#">Edition 2012</a></li>
+                    <li><a href="#">Edition 2011</a></li>
+                    <li><a href="#">Edition 2010</a></li>
+                    <li><a href="#">Edition 2009</a></li>
+                </ul>
+
+                <h4>Site map</h4>
+                <ul>
+                    <li><a href="#">Schedule</a></li>
+                    <li><a href="#">Speakers overview</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Practical</a></li>
+                </ul>
+
+            </div>
+
+            <div class="col5">
+
+                <h4>Other countries</h4>
+                <ul>
+                    <li><a href="#">Devoxx Paris</a></li>
+                    <li><a href="#">Devoxx London</a></li>
+                    <li><a href="#">Devoxx here name</a></li>
+                </ul>
+
+                <h4>Follow us</h4>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </ul>
+
+            </div>
+
+            <div class="col10 sponsors">
+
+                <h4>Our sponsors</h4>
+
+                <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+
+            </div>
+        </div>
+
+    </div>
+</footer>
+
+
+
+<div id="disclaimer" class="area black">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col11">
+
+                <a href="#">privacy policy</a> | <a href="#">disclaimer</a>
+
+            </div>
+            <div class="col9">
+
+                design by <a href="http://www.three-sixty.be" target="_blank">Three-Sixty Media</a>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
