--- a/src/main/webapp/views/login.html
+++ b/src/main/webapp/views/login.html
@@ -1,9 +1,8 @@
 <div ng-controller="LoginCtrl">
     <div>
         <h3>Login</h3>
-        <p>Login as</p>
-        Email: <input type="email" ng-model="model.email">
-        Password: <input type="password" ng-model="model.password" devoxx-on-return-key="login()">
+        Email <input type="email" ng-model="model.email"> <br>
+        Password <input type="password" ng-model="model.password" devoxx-on-return-key="login()"> <br>
         <button ng-click="login()">Login</button>
     </div>
 
