--- a/src/main/webapp/views/speaker/talk_details.html
+++ b/src/main/webapp/views/speaker/talk_details.html
@@ -1,6 +1,5 @@
 <div ng-controller="Speaker_TalkDetailsCtrl">
-    <ng-include src="'views/speaker/_menu.html'"></ng-include>
-    <h3>Talk Details</h3>
+    <h3>Proposal Details</h3>
     <dl>
         <dt>ID</dt>
         <dd>{{model.talk.id}}</dd>
