--- a/src/main/webapp/views/speaker/my_talks.html
+++ b/src/main/webapp/views/speaker/my_talks.html
@@ -1,6 +1,5 @@
 <div ng-controller="Speaker_MyTalksCtrl">
-    <ng-include src="'views/speaker/_menu.html'"></ng-include>
-    <h3>My Proposals</h3>
+    <h3>My Proposals</h3> <a href="#/speaker/proposal/new">New</a>
     <table>
         <thead>
             <tr>
