added extra karma config, incorporated new design, lots of bugfixes, first version of form validation in SubmitTalk page

--- a/src/main/webapp/css/uniform.css
+++ b/src/main/webapp/css/uniform.css
@@ -7,7 +7,7 @@ form ul li {
 	margin: 0 0 15px;
 	padding: 0 0 0 150px;
 }
-form ul li label {
+form ul li > label {
 	display: inline;
 	float: left;
 	margin: 0 0 0 -150px;
