--- a/src/main/webapp/views/home.html
+++ b/src/main/webapp/views/home.html
@@ -1,112 +1,79 @@
 
-<div id="carousel" >
-
+<div id="carousel" style="display:none"><!--TODO: enable when done, this is annoying-->
     <ul carousel>
         <li>
             <div class="grid">
 
                 <div class="row">
                     <div class="col9 content">
-
                         <h1>Born to be</h1>
                         <h3>Edition 2013</h3>
                         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
                         <a href="#" class="btn">Link here</a>
-
                     </div>
                     <div class="col11">
-
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
-
                     </div>
                 </div>
             </div>
-
         </li>
         <li>
             <div class="grid">
-
                 <div class="row">
                     <div class="col9 content">
-
                         <h1>Last call for papers</h1>
                         <h3>Become a speaker</h3>
                         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
                         <a href="#" class="btn">Submit a paper</a>
-
                     </div>
                     <div class="col11">
-
                         <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
-
                     </div>
                 </div>
             </div>
-
         </li>
         <li>
             <div class="grid">
-
                 <div class="row">
                     <div class="col9 content">
-
                         <h1>Slide 3</h1>
                         <h3>edition 2013</h3>
                         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
                         <a href="#" class="btn">Link here</a>
-
                     </div>
                     <div class="col11">
-
                         <img src="images_dummy/slide_03.png" class="visual" alt="Be born again">
-
                     </div>
                 </div>
             </div>
-
         </li>
     </ul>
-
 </div>
-
-
 
 <div id="about" class="area lightgrey">
     <div class="grid">
-
         <div class="row">
             <div class="col12">
-
                 <div class="counter" id="counterSpeakers">
                     <div class="amount">172</div>
                     <div class="description">Speakers</div>
                 </div>
-
-
                 <div class="counter" id="counterTalks">
                     <div class="amount">200</div>
                     <div class="description">Talks</div>
                 </div>
-
                 <img src="images/home_about_map.png" alt="map" class="map" />
-
             </div>
             <div class="col7 push1 content">
-
                 <h2>3600 visitors to be expected</h2>
                 <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum.</p>
                 <a href="#" class="btn">Buy tickets</a>
-
             </div>
         </div>
-
     </div>
 </div>
 
-
-
 <div id="news" class="area white">
-
     <h2>Latest news</h2>
 
     <div class="carousel">
@@ -316,7 +283,7 @@
 
                     <ul tweetwall>
                         <li ng-repeat="tweet in tweets" ng-class-even="'even'">
-                            <div class="visual" style="background-image: url({{tweet.thumbnail}});"></div>
+                            <img class="visual" ng-src="{{tweet.thumbnail}}">
                             <div class="tweet">
                                 <p>{{tweet.tweet}}</p>
                                 <div class="info">
