--- a/app/views/speaker/proposal.html
+++ b/app/views/speaker/proposal.html
@@ -1,4 +1,4 @@
-<div ng-controller="Speaker_TalkDetailsCtrl">
+<div ng-controller="Speaker_ProposalDetailsCtrl">
     <h3>Proposal Details</h3>
     <dl>
         <dt>ID</dt>
