--- a/app/views/speaker/speaker_details.html
+++ b/app/views/speaker/speaker_details.html
@@ -1,31 +1,73 @@
-<dl>
-    <dt><label for="speakerDetailsEmail">Email address</label></dt>
-    <dd>
+<ul>
+    <li>
+        <label for="speakerDetailsEmail">Email address</label>
         <input id="speakerDetailsEmail"
                type="email"
                ng-model="model.speakerDetails.email"
-               ng-disabled="true"
-               >
-    </dd>
+               devoxx-uniform
+               ng-disabled="true">
 
-    <dt><label for="speakerDetailsFirstname">First name</label></dt>
-    <dd><input id="speakerDetailsFirstname" type="text" ng-model="model.speakerDetails.firstname"></dd>
 
-    <dt><label for="speakerDetailsLastname">Last name</label></dt>
-    <dd><input id="speakerDetailsLastname" type="text" ng-model="model.speakerDetails.lastname" ></dd>
+    <li>
+        <label for="speakerDetailsFirstname">First name</label>
+        <input id="speakerDetailsFirstname"
+               type="text"
+               ng-model="model.speakerDetails.firstname"
+               devoxx-uniform
+               ng-required="true">
+    </li>
 
-    <dt><label for="speakerDetailsCountry">Country</label></dt>
-    <dd><input id="speakerDetailsCountry" type="text" ng-model="model.speakerDetails.country" ></dd>
+    <li>
+        <label for="speakerDetailsLastname">Last name</label>
+        <input id="speakerDetailsLastname"
+               type="text"
+               ng-model="model.speakerDetails.lastname"
+               devoxx-uniform
+               ng-required="true">
+    </li>
 
-    <dt><label for="speakerDetailsCompany">Company</label></dt>
-    <dd><input id="speakerDetailsCompany" type="text" ng-model="model.speakerDetails.company" ></dd>
+    <li>
+        <label for="speakerDetailsCountry">Country</label>
+        <input id="speakerDetailsCountry"
+               type="text"
+               ng-model="model.speakerDetails.country"
+               devoxx-uniform
+               ng-required="true">
+    </li>
 
-    <dt><label for="speakerDetailsBio">Bio</label></dt>
-    <dd><textarea id="speakerDetailsBio" type="text" ng-model="model.speakerDetails.speakerBio" ></textarea></dd>
+    <li>
+        <label for="speakerDetailsCompany">Company</label>
+        <input id="speakerDetailsCompany"
+               type="text"
+               ng-model="model.speakerDetails.company"
+               devoxx-uniform
+               ng-required="true">
+    </li>
 
-    <dt><label for="speakerDetailsReferences">References</label></dt>
-    <dd><textarea id="speakerDetailsReferences" type="text" ng-model="model.speakerDetails.speakingReferences" ></textarea></dd>
+    <li>
+        <label for="speakerDetailsBio">Bio</label>
+        <textarea id="speakerDetailsBio"
+                  type="text"
+                  ng-model="model.speakerDetails.speakerBio"
+                  devoxx-uniform
+                  ng-required="true"></textarea>
+    </li>
 
-    <dt><label for="speakerDetailsTwitterHandle">Twitter handle</label></dt>
-    <dd><input id="speakerDetailsTwitterHandle" type="text" ng-model="model.speakerDetails.twitterHandle"></dd>
-</dl>
+    <li>
+        <label for="speakerDetailsReferences">References</label>
+        <textarea id="speakerDetailsReferences"
+                  type="text"
+                  ng-model="model.speakerDetails.speakingReferences"
+                  devoxx-uniform
+                  ng-required="true"></textarea>
+    </li>
+
+    <li>
+        <label for="speakerDetailsTwitterHandle">Twitter handle</label>
+        <input id="speakerDetailsTwitterHandle"
+               type="text"
+               ng-model="model.speakerDetails.twitterHandle"
+               devoxx-uniform
+               devoxx-validate-twitter-handle>
+    </li>
+</ul>
