--- a/app/views/speaker/submit_talk_bak.html
+++ b/app/views/speaker/submit_talk_bak.html
@@ -1,7 +1,7 @@
 <div ng-controller="Speaker_GlobalCtrl">
     <div ng-controller="Speaker_SubmitTalkCtrl">
         <h3>Submit Talk</h3>
-        <form name="submitTalkForm" onsubmit="return false">
+        <form name="submitProposalForm" onsubmit="return false">
             <dl>
                 <dt>Event</dt>
                 <dd>
