--- a/app/views/speaker/proposals.html
+++ b/app/views/speaker/proposals.html
@@ -5,31 +5,28 @@
             <div class="col20">
                 <h4>Submit Proposal</h4>
 
-                <div ng-controller="Speaker_ProposalsCtrl">
+                <div ng-controller="Speaker_ProposalsCtrl" ng-cloak>
                     <h3>My Proposals</h3>
-                    <select ng-model="model.event" ng-options="e.name for e in model.events()" ng-change="getProposals(model.event)" devoxx-uniform>
-                        <option value="">Choose an event</option>
-                    </select>
                     <a href="#/speaker/proposal/new" class="btn btn-primary">New</a>
-                    <table class="table" ng-show="model.event">
+                    <hr>
+                    <h4 ng-show="!model.myProposals">Loading</h4>
+                    <h4 ng-show="model.myProposals && model.myProposals.length == 0">No proposals</h4>
+                    <table class="table" ng-show="model.myProposals.length > 0">
                         <thead>
                             <tr>
-                                <th><input type="checkbox"></th>
-                                <th>Title</th>
-                                <th>Type</th>
-                                <th>State</th>
-                                <th></th>
-                                <th></th>
+                                <th class="col1">Title</th>
+                                <th class="col2">State</th>
+                                <th class="col3"></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr ng-repeat="proposal in model.myProposals">
-                                <td><input type="checkbox"></td>
-                                <td>{{proposal.title}}</td>
-                                <td>{{proposal.type.name}}</td>
-                                <td>{{proposal.state}}</td>
-                                <td><a ng-click="showDetails(proposal)" class="btn">Edit</a></td>
-                                <td><a ng-click="deleteProposal(proposal)" class="btn">Delete</a></td>
+                                <td class="col1">{{proposal.title}}</td>
+                                <td class="col2">{{proposal.state}}</td>
+                                <td class="col3">
+                                    <a ng-click="showDetails(proposal)" class="btn">Edit</a>
+                                    <a ng-click="deleteProposal(proposal)" class="btn">Delete</a>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
